--- a/CleanGuruApp/CleanGuruApp/Views/Home/Index.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
    
 </head>
 <body>
-    <h1>Hello, world!</h1>
-    <button type="button" class="btn btn-primary">Primary</button>
+    <h1>Welcome to Home Page!</h1>
+    @*<button type="button" class="btn btn-primary">Primary</button>*@
     </body>
 </html>
