--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/CreateAppointment.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/CreateAppointment.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "CreateAppointment";
 }
 
-<h2>Customre Registration</h2>
+<h2>Create Appointment</h2>
 
 
 <div asp-validation-summary="All" class="validation-summary-errors"></div>
