--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -43,11 +43,16 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link "  tabindex="-1" asp-controller="Appointment" asp-action="CreateAppointment"> Create Appointment</a>
+                        <a class="nav-link " tabindex="-1" asp-controller="Appointment" asp-action="CreateAppointment"> Create Appointment</a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link " href="#" tabindex="-1">Contact Us</a>
+                    </li>
+
+                    @*JUST TO TEST CREATE USER DELETE LATER*@
+                    <li class="nav-item">
+                        <a class="nav-link " tabindex="-1" asp-controller="Home" asp-action="CreateUser">New User</a>
                     </li>
 
                 </ul>
