--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " tabindex="-1" asp-controller="Appointment" asp-action="CreateAppointment"> Create Appointment</a>
+                        <a class="nav-link " tabindex="-1" asp-controller="Home" asp-action="CreateAppointment">Create Appointment</a>
                     </li>
 
                     <li class="nav-item">
