--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -17,40 +17,33 @@
 </head>
 <body>
     <div class="alpageMargin">
-        <nav class="navbar navbar-light navbar-expand-lg " style="background-color: #e3f2fd; ">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="background-color:#0099ff;" >
             <a class="navbar-brand" href="#" style="margin:10px">CleanGuru</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent" style="font-size:16px">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" asp-controller="Home" asp-action="Index">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/Views/Home/Service.cshtml">About Us</a>
+                    <li class="nav-item active" >
+                        <a class="nav-link" asp-controller="Home" asp-action="AboutUs">About Us</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Services
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" asp-controller="Home" asp-action="Service">Service</a>
-                            <a class="dropdown-item" href="~/Views/Home/Service.cshtml">Another action</a>
-                            <div class="dropdown-divider" href="#"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
+                    <li class="nav-item active">
+                        <a class="nav-link " asp-controller="Home" asp-action="Service" tabindex="-1">Service</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#" tabindex="-1">Contact</a>
+
+                    <li class="nav-item active">
+                        <a class="nav-link " asp-controller="Home" asp-action="Contact" tabindex="-1">Contact</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
 
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+                    <button class="btn btn-outline-light my-2 my-sm-0 btn-lg" type="submit">Login</button>
                 </form>
-                <
+                
             </div>
         </nav>
         <div id="header">
