--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     <li class="nav-item active">
                         <a class="nav-link" asp-controller="Home" asp-action="Index">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active" >
+                    <li class="nav-item active">
                         <a class="nav-link" asp-controller="Home" asp-action="AboutUs">About Us</a>
                     </li>
                     <li class="nav-item active">
@@ -37,6 +37,9 @@
 
                     <li class="nav-item active">
                         <a class="nav-link " asp-controller="Home" asp-action="Contact" tabindex="-1">Contact</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link " asp-controller="Home" asp-action="Schedule" tabindex="-1">Schedule</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
