ScheduleCleaner page with controllers //not finished, have some error

--- a/CleanGuruApp/CleanGuruApp/Views/Appointment/Index.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Appointment/Index.cshtml
@@ -1,14 +1,12 @@
 ﻿@model IEnumerable<CleanGuruApp.Models.Appointment>
 
 @{
-    ViewData["Title"] = "View";
+    ViewData["Title"] = "Index";
 }
 
 <h2>View</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
 <table class="table">
     <thead>
         <tr>
