--- a/CleanGuruApp/CleanGuruApp/Views/Shared/CreateUser.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/CreateUser.cshtml
@@ -33,4 +33,8 @@
 
     @*<button class="btn btn-outline-success my-2 my-sm-0" type="submit" asp-controller="Appointment" asp-action="SaveAppontment">Create Appointment</button>*@
     <button class="btn btn-danger" asp-controller="Home" asp-action="Index">Cancel</button>
+    <div>
+        <a asp-controller="Home" asp-action="Register">Don't have an account? Sign Up Free!!</a>
+    </div>
+  
 </form>
