--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -32,19 +32,19 @@
                         <a class="nav-link" asp-controller="Home" asp-action="AboutUs">About Us</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link " asp-controller="Home" asp-action="Service" tabindex="-1">Service</a>
+                        <a class="nav-link " asp-controller="Home" asp-action="CreateAppointment" tabindex="-1">Service</a>
                     </li>
 
                     <li class="nav-item active">
                         <a class="nav-link " asp-controller="Home" asp-action="Contact" tabindex="-1">Contact</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link " asp-controller="Home" asp-action="Schedule" tabindex="-1">Schedule</a>
+                        <a class="nav-link " asp-controller="ScheduleCleaners" asp-action="index" tabindex="-1">Schedule</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
 
-                    <button class="btn btn-outline-light my-2 my-sm-0 btn-lg" type="submit">Login</button>
+                    <button class="btn btn-outline-light my-2 my-sm-0 btn-lg"  asp-controller="Home" asp-action="CreateUser" type="submit">Login</button>
                 </form>
                 
             </div>
