modify first page

--- a/CleanGuruApp/CleanGuruApp/Views/Home/Index.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Home/Index.cshtml
@@ -7,10 +7,13 @@
  
     <title>Clean Guru!</title>
 
-   
+ 
 </head>
 <body>
-    <h1>Welcome to Home Page!</h1>
-    @*<button type="button" class="btn btn-primary">Primary</button>*@
+    <div style="margin-left:auto; margin-right:auto">
+        <img src="~/images/bg_image.jpg" />
+    </div>
+
+    
     </body>
 </html>
