bg_index update

--- a/CleanGuruApp/CleanGuruApp/Views/Home/Index.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
    
 </head>
-<body style="background-image:url(/images/bg_image.jpg); background-repeat:no-repeat; background-size:cover">
+<body id="bg_index" >
     <h1>Welcome to Home Page!</h1>
     @*<button type="button" class="btn btn-primary">Primary</button>*@
     </body>
