--- a/CleanGuruApp/CleanGuruApp/Views/Home/Index.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Home/Index.cshtml
@@ -3,14 +3,16 @@
 }
 <!doctype html>
 <html lang="en">
-<head>
- 
+<head> 
     <title>Clean Guru!</title>
-
-   
+       
 </head>
-<body style="background-image:url(/images/bg_image.jpg); background-repeat:no-repeat; background-size:cover">
-    <h1>Welcome to Home Page!</h1>
+<body>
+    <div style="background-image:url(/images/bg_image.jpg); background-repeat:no-repeat; background-size:80%">
+        <h1>Welcome to Home Page!</h1>
+
+    </div>
+    
     @*<button type="button" class="btn btn-primary">Primary</button>*@
     </body>
 </html>
