cost service page is working well and modified layout

--- a/CleanGuruApp/CleanGuruApp/Views/Home/Manager.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Home/Manager.cshtml
@@ -4,4 +4,96 @@
 }
 
 <h2>Manager</h2>
+<div>
+    <h3> Appointment</h3>
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">Service ID</th>
+                <th scope="col">Service Name</th>
+                <th scope="col">Price(Customer)</th>
+                <th scope="col">Cost(Cleaner)</th>
+                <th scope="col">Status</th>
+                <th scope="col">Handle</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td></td>
+            </tr>
+           
+        </tbody>
+    </table>
 
+</div>
+<div>
+    <h3> Customer</h3>
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">Service ID</th>
+                <th scope="col">Service Name</th>
+                <th scope="col">Price(Customer)</th>
+                <th scope="col">Cost(Cleaner)</th>
+                <th scope="col">Status</th>
+                <th scope="col">Handle</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td></td>
+            </tr>
+
+        </tbody>
+    </table>
+
+</div>
+<div>
+    <h3> Cleaner</h3>
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">Service ID</th>
+                <th scope="col">Service Name</th>
+                <th scope="col">Price(Customer)</th>
+                <th scope="col">Cost(Cleaner)</th>
+                <th scope="col">Status</th>
+                <th scope="col">Handle</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td></td>
+            </tr>
+
+        </tbody>
+    </table>
+
+</div>
