--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -40,7 +40,10 @@
                         <a class="nav-link " asp-controller="ScheduleCleaners" asp-action="index" tabindex="-1">Schedule</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link " asp-controller="Home" asp-action="CreateService" tabindex="-1">Cost Service</a>
+                        <a class="nav-link " asp-controller="ServicePrices" asp-action="index" tabindex="-1">Cost Service</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link " asp-controller="Home" asp-action="Manager" tabindex="-1">Manager</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
