create manager page and modify layout

--- a/CleanGuruApp/CleanGuruApp/Views/Home/Manager.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Home/Manager.cshtml
@@ -9,28 +9,22 @@
     <table class="table">
         <thead class="thead-dark">
             <tr>
+                <th scope="col">Appointment ID</th>
                 <th scope="col">Service ID</th>
-                <th scope="col">Service Name</th>
-                <th scope="col">Price(Customer)</th>
-                <th scope="col">Cost(Cleaner)</th>
-                <th scope="col">Status</th>
-                <th scope="col">Handle</th>
+                <th scope="col">Customer ID</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
+                <td></td>
+                <td></td>
                 <td></td>
             </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td></td>
-            </tr>
-           
+
         </tbody>
     </table>
 
@@ -40,25 +34,25 @@
     <table class="table">
         <thead class="thead-dark">
             <tr>
-                <th scope="col">Service ID</th>
-                <th scope="col">Service Name</th>
-                <th scope="col">Price(Customer)</th>
-                <th scope="col">Cost(Cleaner)</th>
-                <th scope="col">Status</th>
-                <th scope="col">Handle</th>
+                <th scope="col">Customer ID</th>
+                <th scope="col">Customer Name</th>
+                <th scope="col">User Name</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Email</th>
+
             </tr>
         </thead>
         <tbody>
             <tr>
                 <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
+                <td></td>
+                <td></td>
                 <td></td>
             </tr>
             <tr>
                 <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
+                <td></td>
+                <td></td>
                 <td></td>
             </tr>
 
@@ -71,25 +65,25 @@
     <table class="table">
         <thead class="thead-dark">
             <tr>
-                <th scope="col">Service ID</th>
-                <th scope="col">Service Name</th>
-                <th scope="col">Price(Customer)</th>
-                <th scope="col">Cost(Cleaner)</th>
-                <th scope="col">Status</th>
-                <th scope="col">Handle</th>
+                <th scope="col">Cleaner ID</th>
+                <th scope="col">Cleaner Name</th>
+                <th scope="col">User Name/th>
+                <th scope="col">Address</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Action</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
+                <td></td>
+                <td></td>
                 <td></td>
             </tr>
             <tr>
                 <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
+                <td></td>
+                <td></td>
                 <td></td>
             </tr>
 
