--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                         <a class="nav-link " asp-controller="Home" asp-action="Contact" tabindex="-1">Contact</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link " asp-controller="ScheduleCleaners" asp-action="index" tabindex="-1">Schedule</a>
+                        <a class="nav-link " asp-controller="ScheduleCleaners" asp-action="index" tabindex="-1">Availability</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link " asp-controller="ServicePrices" asp-action="index" tabindex="-1">Cost Service</a>
