--- a/CleanGuruApp/CleanGuruApp/Views/Home/Index.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
    
 </head>
-<body id="bg_index" >
+<body>
     <h1>Welcome to Home Page!</h1>
     @*<button type="button" class="btn btn-primary">Primary</button>*@
     </body>
