--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-
+    
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,8 +14,10 @@
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="~/css/Styles.css" type="text/css">
 
+</head>
+<body>
     <div class="alpageMargin">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="background-color:#0099ff;">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="background-color:#0099ff;" >
             <a class="navbar-brand" href="#" style="margin:10px">CleanGuru</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -37,29 +39,19 @@
                         <a class="nav-link " asp-controller="Home" asp-action="Contact" tabindex="-1">Contact</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link " asp-controller="ScheduleCleaners" asp-action="index" tabindex="-1">Availability</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link " asp-controller="ServicePrices" asp-action="index" tabindex="-1">Cost Service</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link " asp-controller="Home" asp-action="Manager" tabindex="-1">Manager</a>
+                        <a class="nav-link " asp-controller="ScheduleCleaners" asp-action="index" tabindex="-1">Schedule</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
 
-                    <button class="btn btn-outline-light my-2 my-sm-0 btn-lg" asp-controller="Home" asp-action="CreateUser" type="submit">Login</button>
+                    <button class="btn btn-outline-light my-2 my-sm-0 btn-lg"  asp-controller="Home" asp-action="CreateUser" type="submit">Login</button>
                 </form>
-
+                
             </div>
         </nav>
         <div id="header">
 
         </div>
-
-</head>
-<body>
-    
 
 
 
