Change asp-controler Appoitnment
Change asp-controler from Home to Appoitnment (asp-action"CreateAppointment".

--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         <a class="nav-link" asp-controller="Home" asp-action="AboutUs">About Us</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link " asp-controller="Home" asp-action="CreateAppointment" tabindex="-1">Service</a>
+                        <a class="nav-link " asp-controller="Appointment" asp-action="CreateAppointment" tabindex="-1">Service</a>
                     </li>
 
                     <li class="nav-item active">
