UserStory to Show Future Appointments
UserStory to Show to Customer the Future Appointments.
Mudança do tipo da variavel isSubscription para boolean.

--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -34,7 +34,9 @@
                     <li class="nav-item active">
                         <a class="nav-link " asp-controller="Appointment" asp-action="CreateAppointment" tabindex="-1">Service</a>
                     </li>
-
+                    <li class="nav-item active">
+                        <a class="nav-link " asp-controller="Appointment" asp-action="FutureAppointment" tabindex="-1">Future Services</a>
+                    </li>
                     <li class="nav-item active">
                         <a class="nav-link " asp-controller="Home" asp-action="Contact" tabindex="-1">Contact</a>
                     </li>
