--- a/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                     <li class="nav-item active">
                         <a class="nav-link " asp-controller="ScheduleCleaners" asp-action="index" tabindex="-1">Schedule</a>
                     </li>
+                    <li class="nav-item active">
+                        <a class="nav-link " asp-controller="ServicePrices" asp-action="index" tabindex="-1">Cost Service</a>
+                    </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
 
