recover missed code and modify main page

--- a/CleanGuruApp/CleanGuruApp/Views/Home/Register.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Home/Register.cshtml
@@ -4,8 +4,8 @@
 }
 
 <h2>  Registration  </h2>
-<div asp-validation-summary="All" class="validation-summary-errors"></div>
-<form class="form defaultForm" asp-action="Register" asp-controller="Account" method="post">
+<div asp-validation-summary="All" class="validation-summary-errors "></div>
+<form class="form defaultForm" style="width:80%"asp-action="Register" asp-controller="Account" method="post">
     <div class="form-group">
         <label>Username</label>
         <input class="form-control" />
