--- a/CleanGuruApp/CleanGuruApp/Views/Home/Index.cshtml
+++ b/CleanGuruApp/CleanGuruApp/Views/Home/Index.cshtml
@@ -4,13 +4,25 @@
 <!doctype html>
 <html lang="en">
 <head>
- 
+
     <title>Clean Guru!</title>
 
-   
+
 </head>
 <body>
-    <h1>Welcome to Home Page!</h1>
-    @*<button type="button" class="btn btn-primary">Primary</button>*@
-    </body>
+  
+    <div id="bg_index" class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+        <div class="col-md-5 p-lg-5 mx-auto my-5">
+            <h1 class="display-4 font-weight-normal">CLEAN GURU</h1>
+            <p class="lead font-weight-normal">Welcome to our home page</p>
+            <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+        </div>
+        <div class="product-device shadow-sm d-none d-md-block"></div>
+        <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+    </div>
+
+    <div >
+
+    </div>
+</body>
 </html>
